More css. fixed horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+html {
+  scrollbar-gutter: stable;
+}
+
 #root {
   text-align: center;
   background-color: white;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   color: #213547;
 }
 
