--- a/src/HeaderBar.css
+++ b/src/HeaderBar.css
@@ -1,5 +1,5 @@
 .header-bar {
-  width: 100vw;
+  width: 100%;
   height: 4.5rem;
   color: #FF992C;
   background-color: white;
