--- a/src/Summary.css
+++ b/src/Summary.css
@@ -1,5 +1,5 @@
 .summary {
-  margin-top: 2rem;
+  margin: 2rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,8 @@
 .summaryInfo {
   border-radius: 20px;
   box-shadow: darkgray 5px 10px 10px;
-  width: min(600px);
+  width: 100%;
+  max-width: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,6 +26,7 @@
 .sumText {
   max-width: 50ch;
   margin: 0 0 10px 0;
+  padding: 0 0.5rem;
 }
 
 .links {
